--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
 
     <!-- Flavicon -->
-    <link rel="shortcut icon" type="image/png" href="assets/images/favicon.ico">
+    <link rel="shortcut icon" type="image/png" href="assets/images/wiz.png">
 
     <!-- Latest compiled and minified CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
@@ -71,22 +71,22 @@
     <div class="row">
         <div class="col-md-offset-2 col-md-2 col-sm-3 col-xs-6">
             <button id="art1" type="button" class="btn btn-default" value="0">
-                <img src="assets/images/art_1.jpg" alt="art1" class="img-responsive">
+                <img src="assets/images/art_1.jpg" alt="art1" class="art img-responsive">
             </button>
         </div>
         <div class="col-md-2 col-sm-3 col-xs-6">
             <button id="art2" type="button" class="btn btn-default" value="1">
-                <img src="assets/images/art_2.jpg" alt="art2" class="img-responsive">
+                <img src="assets/images/art_2.jpg" alt="art2" class="art img-responsive">
             </button>
         </div>
         <div class="col-md-2 col-sm-3 col-xs-6">
             <button id="art3" type="button" class="btn btn-default" value="2"> 
-                <img src="assets/images/art_3.jpg" alt="art3" class="img-responsive">
+                <img src="assets/images/art_3.jpg" alt="art3" class="art img-responsive">
             </button>
         </div>
         <div class="col-md-2 col-sm-3 col-xs-6">
             <button id="art4" type="button" class="btn btn-default" value="3">
-                <img src="assets/images/art_4.jpg" alt="art4" class="img-responsive">
+                <img src="assets/images/art_4.jpg" alt="art4" class="art img-responsive">
             </button>
         </div>
     </div>
